UI Improvements for Cleverest. Mark playboard as old and deprecated, created new one.